sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  
  var i:Int = 0
  
  while (i < getNombreValeurs()) {
  
    if (plusPetit(i+2, i+1)) {
      
      echange(i+2, i+1)
      i = i + 1
    
    }
      
    else {
      
      if (i = 0) {i = i + 1}
      else {i = i - 1}
      
    }
      
    }
    
}
  

